Much verbage.  Break for dinner.

--- a/Fall-2014/raw-text-for-tawp/temp-holder-for-new-refs.haml
+++ b/Fall-2014/raw-text-for-tawp/temp-holder-for-new-refs.haml
@@ -1,10 +1,13 @@
 
 references.html#adie2013
+references.html#combs2010
+references.html#ellis2010
 references.html#fidler2004
 references.html#gregory1937
 references.html#gross1927
 references.html#hackh1936
 references.html#hambrick1994
+references.html#lockett2014
 references.html#martyn1968
 references.html#mohammadi2014
 references.html#schwab2011
@@ -20,6 +23,12 @@ references.html#rynes2001
 %p#adie2013
   Adie, Euan, and William Roe. 2013. “Altmetric: Enriching Scholarly Content with Article-Level Discussion and Metrics.” <i>Learned Publishing</i> 26 (1): 11–17. <a href="http://doi.org/10.1087/20130103" >10.1087/20130103</a>.
 
+%p#combs2010
+  Combs, James G. 2010. “Big Samples and Small Effects: Let's Not Trade Relevance and Rigor for Power.” <i>Academy of Management Journal</i> 53 (1): 9–13.
+
+%p#ellis2010
+  Ellis, Paul D. 2010. “Effect Sizes and the Interpretation of Research Results in International Business.” <i>Journal of International Business Studies</i> 41 (9). Nature Publishing Group: 1581–88. <a href="http://doi.org/10.1057/jibs.2010.39" >10.1057/jibs.2010.39</a>.
+
 %p#fidler2004
   Fidler, Fiona, Cumming Geoff, Burgman Mark, and Thomason Neil. 2004. “Statistical Reform in Medicine, Psychology and Ecology.” <i>The Journal of Socio-Economics</i> 33 (5): 615–30. <a href="http://doi.org/10.1016/j.socec.2004.09.035" >10.1016/j.socec.2004.09.035</a>.
 
@@ -34,6 +43,9 @@ references.html#rynes2001
 
 %p#hambrick1994
   Hambrick, Donald C. 1994. “What If the Academy Actually Mattered?” <i>The Academy of Management Review</i> 19 (1): 11–16. <a href="http://www.jstor.org/stable/258833" >http://www.jstor.org/stable/258833</a>.
+
+%p#lockett2014
+  Lockett, Andy, Abagail McWilliams, and David D. Van Fleet. 2014. “Reordering Our Priorities by Putting Phenomena before Design: Escaping the Straitjacket of Null Hypothesis Significance Testing.” <i>British Journal of Management</i> 25 (4): 863–73. <a href="http://doi.org/10.1111/1467-8551.12063">10.1111/1467-8551.12063</a>.
 
 %p#martyn1968
   Martyn, John, and Alan Gilchrist. 1968. <i>An Evaluation of British Scientific Journals</i>. London: Aslib.
